# rhok

./: .gitignore  Cargo.toml  Makefile  README.md  expected_iter.cpp  gen_table.py  knuthmin.cpp  m10-stats62-semiprime.txt  m6-stats62-semiprime.txt  protocol.md  todo
article/: alpha.pdf_tex  beta.pdf_tex  gamma.pdf_tex  rhok.bib  rhok.tex
benches/: multi.rs  rho.rs  single.rs
plots/: gcd-error.tex  m=2-table.tex  m=3.tex  m=4.tex  m=5.tex
poster/: abb1.tex  abb2.tex  o.sty  p.tex  poster.tex  q.tex  rho-explanation.tex  title.tex
src/: fenwick_tree.rs  formula.rs  lib.rs  main.rs  measurements.rs  miller_rabin.rs  montgomery.rs  multi.rs  pollard_rho.rs  rho.rs  single.rs  stats.rs
src/multi/: mod.rs  pollard_rho.rs
src/single/: miller_rabin.rs  mod.rs  pollard_rho.rs
