[package]
name = "rhok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_xoshiro = "0.6.0"
rayon = "1.8.0"
rug = "1.22.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "rho"
harness = false
